# ParallelImageProcessor

./: .gitignore  CMakeLists.txt  README.md
base/: main.cpp
cuda/: main.cu
mpi/: main.cpp
openmp/: main.cpp
